--- a/translations/kangyur/translations/066-008_toh250-the_four_factors.xml
+++ b/translations/kangyur/translations/066-008_toh250-the_four_factors.xml
@@ -10,7 +10,7 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa</title>
                 <title type="longTitle" xml:lang="en">The Sūtra on the Four
                                         Factors</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Catur­dharmaka­sūtra</title>
                 <title type="longTitle" xml:lang="bo">ཆོས་བཞི་པའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">chos bzhi pa’i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-066-008-64">Translated by Adam
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-008-161">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.6 <date>2024</date>
+                <edition>v 1.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -198,6 +198,9 @@
                 <change who="#celso" when="2024-04-24T17:50:15.948Z" type="text-version" status="1.0.6" xml:id="UT22084-066-008-170">
                     <desc>Activated pending links</desc>
                 </change>
+                <change who="#andre" when="2024-06-27T09:59:21.822Z" type="text-version" status="1.0.7" xml:id="UT22084-066-008-172">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -228,7 +231,7 @@
                                         <milestone unit="chunk" xml:id="UT22084-066-008-5"/>
                                         <p tid="9">
                         <title xml:lang="en">The Sūtra of the Four
-                                                Factors</title> (<title xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</title>, Toh 250) is the second of three short sūtras with
+                                                Factors</title> (<title xml:lang="Sa-Ltn">Catur­dharmaka­sūtra</title>, Toh 250) is the second of three short sūtras with
                                                 similar titles, all referring to sets of four
                                                 factors (Skt. <foreign xml:lang="Sa-Ltn" type="term">dharma</foreign>), that contribute to 
                                                 accomplishing the goal of the path. In many 
@@ -272,7 +275,8 @@
                                                 factors.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-008-6"/>
                                         <p tid="47">In the present sūtra, the Buddha addresses an
-                                                audience of 1,250 monks in Jeta Grove in Śrāvastī. He
+                                                audience of 1,250 monks in Jeta’s Grove, Anāthapiṇḍada’s
+                                                Park, in Śrāvastī. He
                                                 tells them about four beliefs (which, interestingly,
                                                 are not explicitly called “factors” in the text),
                                                 describing them as beliefs that a “wise son of good
@@ -307,7 +311,7 @@
                                                 may point to the oral origins of the sūtras. </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-008-9"/>
                                         <p tid="13">The sūtra’s two concluding verses also appear
-                                                among the concluding verses of the <title xml:lang="Sa-Ltn">Śīla­saṃyukta­­sūtra</title>
+                                                among the concluding verses of the <title xml:lang="Sa-Ltn">Śīla­saṃyukta­sūtra</title>
                                                   (<title xml:lang="Bo-Ltn">tshul khrims yang dag
                                                   par ldan pa’i mdo</title>, Toh 303).<note place="end" xml:id="UT22084-066-008-10"> Kīrtimukha
                                                   Translation Group, trans., <title xml:lang="en">The Sūtra on Having Moral Discipline</title>, Toh
@@ -387,7 +391,7 @@
                                        <lb/>
                                         <milestone unit="chunk" xml:id="UT22084-066-008-124"/>
                                         <p tid="28">Thus did I hear at one time. The Blessed One was
-                                                residing in Śrāvastī at Jeta Grove, Anāthapiṇḍada’s
+                                                residing in Śrāvastī, in Jeta’s Grove, Anāthapiṇḍada’s
                                                 Park, together with a great saṅgha of 1250 monks. </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-008-29"/>
                                         <p tid="29">At that time, the Blessed One addressed the
@@ -458,7 +462,7 @@
                                         <head type="section" tid="44">Tibetan and Sanskrit
                                                 Texts</head>
                                         <bibl xml:id="UT22084-066-008-41">
-                        <title xml:lang="Bo-Ltn">chos bzhi pa’i mdo</title> (<title xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</title>). Toh
+                        <title xml:lang="Bo-Ltn">chos bzhi pa’i mdo</title> (<title xml:lang="Sa-Ltn">Catur­dharmaka­sūtra</title>). Toh
                                                 250, Degé Kangyur vol. 66 (mdo sde, za), folios
                                                 59.b–60.a.</bibl>
                                         <bibl xml:id="UT22084-066-008-42">
@@ -479,7 +483,7 @@
                                                 (<title xml:lang="Sa-Ltn">Śīlasaṃyukta­sūtra</title>). Toh 303, Degé Kangyur
                                                 vol. 72 (mdo sde, pa), folios 127.a–127.b.</bibl>
                                         <bibl xml:id="UT22084-066-008-45">Kawa Paltsek (<foreign xml:lang="Bo-Ltn">ska ba dpal
-                                                brtsegs</foreign>). *<title xml:lang="Sa-Ltn">Pravacana­­ratnākhyāna­śākya­vaṃ­śāvalī</title>, <title xml:lang="Bo-Ltn">gsung rab rin
+                                                brtsegs</foreign>). *<title xml:lang="Sa-Ltn">Pravacana­ratnākhyāna­śākya­vaṃ­śāvalī</title>, <title xml:lang="Bo-Ltn">gsung rab rin
                                                           po che’i gtam rgyud dang shA kya’i rabs
                                                           rgyud</title>. Toh 4357, Degé Tengyur vol. 204
                                                 (sna tshogs, co), folios 238.b–377.a.</bibl>
@@ -519,14 +523,14 @@
                                                 Group, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh303.html">The Sūtra on
                                                         Having Moral Discipline</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Śīla­saṃyukta­­sūtra</title>, Toh
+                        </title> (<title xml:lang="Sa-Ltn">Śīla­saṃyukta­sūtra</title>, Toh
                                                 303). 84000: Translating the Words of the Buddha,
                                                 2021.</bibl>
                                         <bibl xml:id="UT22084-066-008-149">Pearcey, Adam, trans. 
                                                 <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh251.html">The Noble Mahāyāna Sūtra on
                                                 the Four Factors</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­nāma­­mahā­yāna­­sūtra</title>, Toh
+                        </title> (<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­nāma­mahā­yāna­sūtra</title>, Toh
                                                 251). 84000: Translating the Words of the Buddha,
                                                 2023.</bibl>
                                         <bibl xml:id="UT22084-066-008-50">Skilling, Peter. <title xml:lang="en">Questioning the Buddha: A Selection
@@ -555,24 +559,14 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss xml:id="UT22084-066-008-56" type="place" mode="match">
-                            <term type="translationMain">Jeta Grove</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition" rend="override">
-                                <p>A grove owned by Prince Jeta in Śrāvastī, the capital of the kingdom of Kośala. It was bought by Anāthapiṇḍada and became a monastery. Since the Buddha often stayed there during rainy seasons, it became a setting for many sūtras.</p>
-                            </note>
+                        <gloss xml:id="UT22084-066-008-171" type="place" mode="match">
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
-                                        <item>
-                        <gloss type="place" xml:id="UT22084-066-008-57">
-                            <term type="translationMain">Anāthapiṇḍada’s Park</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">anāthapiṇḍadārāma</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin gyi kun dga’ ra ba</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-                        </gloss>
-                    </item>
+                                        
                                         <item>
                         <gloss xml:id="UT22084-066-008-58" type="term" mode="match">
                             <term type="translationMain">śrāvaka</term>
