--- a/translations/kangyur/translations/063-010_toh229-discussions_of_thus-gone_ones.xml
+++ b/translations/kangyur/translations/063-010_toh229-discussions_of_thus-gone_ones.xml
@@ -32,7 +32,7 @@
                 <sponsor xml:id="UT22084-063-010-735">马珂，王晓娟</sponsor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.9 <date>2024</date>
+                <edition>v 1.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -204,6 +204,9 @@
                 <change who="#celso" when="2024-06-11T14:35:05.735Z" type="text-version" status="1.0.9" xml:id="UT22084-063-010-796">
                     <desc>corrected typo in glossary</desc>
                 </change>
+                <change who="#andre" when="2024-06-27T14:58:47.523Z" type="text-version" status="1.0.10" xml:id="UT22084-063-010-798">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -217,7 +220,7 @@
                                 <milestone unit="chunk" xml:id="UT22084-063-010-1"/>
                                 <tei:p tid="2">
                     <title xml:lang="en">Discussions of Thus-Gone Ones</title>
-                                        begins in the Jeta Grove as the Buddha Śākyamuni emerges
+                                        begins in the Jeta’s Grove as the Buddha Śākyamuni emerges
                                         from a three-month-long meditative absorption. It is
                                         revealed that while he was absorbed in this meditative
                                         state, he was actually having conversations with many other
@@ -252,7 +255,7 @@
                                         <milestone unit="chunk" xml:id="UT22084-063-010-6"/>
                                         <tei:p tid="10">
                         <title xml:lang="en">Discussions of Thus-Gone
-                                                  Ones</title> takes place in the Jeta Grove at the
+                                                  Ones</title> takes place in the Jeta’s Grove at the
                                                 end of the monsoon. It begins with the Buddha
                                                 Śākyamuni emerging from a meditative absorption in
                                                 which he has rested for the entire three-month rainy
@@ -409,8 +412,7 @@
                                                 buddhas and bodhisattvas!</tei:p>
                                         <lb/>
                                         <tei:p tid="23">Thus did I hear at one time. The Blessed One was
-                                                residing in Śrāvastī in the Jeta Grove, the park of
-                                                Anāthapiṇḍada, together with a great monastic
+                                                residing in Śrāvastī, in Jeta’s Grove, Anāthapiṇḍada’s Park, together with a great monastic
                                                 assembly of one thousand two hundred fifty monks. At
                                                 that time, the Thus-Gone One remained in meditative
                                                 seclusion for three months, sustained by a single
@@ -1130,7 +1132,7 @@
                                                 minds of five hundred monks were freed from
                                                 defilement without any further appropriation.
                                                 Ānanda, among all the monks who abide here in the
-                                                Jeta Grove, there is not a single one who harbors
+                                                Jeta’s Grove, there is not a single one who harbors
                                                 any doubt, uncertainty, or worry with regard to
                                                 these teachings. Five thousand bodhisattvas gained
                                                 certainty in the unborn nature of phenomena. Many
@@ -1244,9 +1246,9 @@
                                                 crown, the precious fan, and the precious jeweled
                                                 shoes. He was presented with all those, and once he
                                                 was adorned with them, he proceeded on foot to the
-                                                Jeta Grove. </tei:p>
+                                                Jeta’s Grove. </tei:p>
                                         <milestone unit="chunk" xml:id="UT22084-063-010-120"/>
-                                        <tei:p tid="117">Understanding that the Jeta Grove was a quiet
+                                        <tei:p tid="117">Understanding that the Jeta’s Grove was a quiet
                                                 place, King Prasenajit of Kośala said to his
                                                 minister Long Shape, “Long Shape, this place is the
                                                 abode of wandering meditators. It is the abode of
@@ -1261,7 +1263,7 @@
                                         <tei:p tid="118">So King Prasenajit of Kośala said to Youthful
                                                 Splendorous Viśākha, “Youthful Splendorous Viśākha,
                                                 please keep my retinue quiet.”</tei:p>
-                                        <tei:p tid="119">In the Jeta Grove, King Prasenajit of Kośala
+                                        <tei:p tid="119">In the Jeta’s Grove, King Prasenajit of Kośala
                                                 then beheld the all-knowing, all-seeing Blessed One
                                                 surrounded by the assembly of monks. He was seated
                                                 and teaching the Dharma while being venerated by the
@@ -1963,7 +1965,7 @@
                                                 and scattered māndārava flowers on the Blessed One,
                                                 and divine music resounded from the sky. In order to
                                                 worship the Thus-Gone One himself, they filled the
-                                                entire Jeta Grove with silken streamers decorated
+                                                entire Jeta’s Grove with silken streamers decorated
                                                 with the seven precious materials. Then he said,
                                                 “Those noble sons and daughters who worship this
                                                 Dharma teaching will be worshiping the blessed
@@ -4604,7 +4606,7 @@
                             <tei:term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin</tei:term>
                             <tei:term xml:lang="bo" type="attestedSource" n="1" status="verified">མགོན་མེད་ཟས་སྦྱིན།</tei:term>
                             <note type="definition" rend="override">
-                                <tei:p>A wealthy merchant of Śrāvastī and benefactor of the Buddha, he donated the Jeta Grove to the Buddha.</tei:p>
+                                <tei:p>A wealthy merchant of Śrāvastī and benefactor of the Buddha, he donated the Jeta’s Grove to the Buddha.</tei:p>
                             </note>
                         </gloss>
                     </item>
@@ -5846,10 +5848,21 @@
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-063-010-634">
-                            <tei:term type="translationMain">Jeta Grove</tei:term>
+                            <tei:term type="translationMain">Jeta’s Grove</tei:term>
                             <tei:term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jetavana</tei:term>
                             <tei:term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal</tei:term>
                             <tei:term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</tei:term>
+                                                <note type="definition">
+                                                        <p>See “Jeta’s Grove, Anāthapiṇḍada’s Park.”</p>
+                                                </note>                 
+                        </gloss>
+                    </item>
+                                        <item>
+                        <gloss xml:id="UT22084-063-010-797" type="place" mode="match">
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                                         <item>
