--- a/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
+++ b/translations/kangyur/translations/062-008_toh208-the_great_rumble.xml
@@ -33,7 +33,7 @@
                                         Rich</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.8 <date>2024</date>
+                <edition>v 1.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -215,6 +215,9 @@
                 <change who="#martina-cotter" when="2024-06-11T13:27:34.7Z" type="text-version" status="1.0.8" xml:id="UT22084-062-008-138">
                     <desc>updated milestone 1.2.</desc>
                 </change>
+                <change who="#andre" when="2024-06-27T16:47:46.599Z" type="text-version" status="1.0.9" xml:id="UT22084-062-008-140">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -373,7 +376,7 @@
                                         <lb/>
                                         <p tid="23">Thus did I hear at one time. The Blessed One was
                                                 staying with a large saṅgha of monks in Śrāvastī, in
-                                                Jeta Grove at Anāthapiṇḍada’s park. At dawn, the
+                                                Jeta’s Grove, Anāthapiṇḍada’s park. At dawn, the
                                                 venerable Ānanda donned his lower and upper robes,
                                                 took up his alms bowl, and went to Śrāvastī on his
                                                 alms round. <ref cRef="F.109.b" type="folio" xml:id="UT22084-062-008-80"/> As he was making his
@@ -853,8 +856,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀུན་དགའ་བོ།</term>
                         </gloss>
                     </item>
-                                        <item>
-                        <gloss type="person" xml:id="UT22084-062-008-61">
+                                        <!--<item><gloss type="person" xml:id="UT22084-062-008-61">
                             <term type="translationMain">Anāthapiṇḍada</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin</term>
@@ -866,8 +868,7 @@
                                                   i.e., Jeta Grove, and donated it to the Buddhist
                                                   community.</p>
                             </note>
-                        </gloss>
-                    </item>
+                        </gloss></item>-->
                                         <item>
                         <gloss type="person" xml:id="UT22084-062-008-62">
                             <term type="translationMain">Devacandra</term>
@@ -1039,17 +1040,11 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-062-008-76">
-                            <term type="translationMain">Jeta Grove</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད།</term>
-                            <note type="definition">
-                                <p>The grove of Prince Jeta
-                                                  in Śrāvastī purchased by Anāthapiṇḍada; the Buddha
-                                                  taught many of his discourses there, especially
-                                                  during the rainy season retreat.</p>
-                            </note>
+                        <gloss xml:id="UT22084-062-008-139" type="place" mode="match">
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                                         <item>
