--- a/translations/kangyur/translations/061-019_toh199-the_sutra_on_the_bodhisattva_maitreya_taking_birth_in_tusita.xml
+++ b/translations/kangyur/translations/061-019_toh199-the_sutra_on_the_bodhisattva_maitreya_taking_birth_in_tusita.xml
@@ -27,7 +27,7 @@
         <editor role="finalReviewer" xml:id="UT22084-061-019-348">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.11 <date>2023</date>
+                <edition>v 1.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -175,6 +175,9 @@
                 <change who="#martina-cotter" when="2023-10-23T21:06:42.107Z" type="text-version" status="1.0.11" xml:id="UT22084-061-019-385">
                     <desc>updated ellipsis.</desc>
                 </change>
+                <change who="#andre" when="2024-06-27T17:13:05.717Z" type="text-version" status="1.0.12" xml:id="UT22084-061-019-387">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -312,14 +315,13 @@
                         <ref cRef="F.296.b" type="folio" xml:id="UT22084-061-019-230"/> Homage to all
             buddhas and bodhisattvas.</p>
           <lb/>
-          <p tid="67"> Thus did I hear at one time. The Blessed One was staying in Prince Jeta’s
-            Grove at Anāthapiṇḍada’s park in Śrāvastī, along with a great congregation of monks and
+          <p tid="67"> Thus did I hear at one time. The Blessed One was staying in Śrāvastī, in Prince Jeta’s Grove, Anāthapiṇḍada’s Park, along with a great congregation of monks and
             many bodhisattva great beings.<note place="end" xml:id="UT22084-061-019-24"> The phrase
               “…along with a great congregation of monks and many bodhisattva great beings” is
               missing in the Chinese.</note> Then, during the first watch of the night, golden light
             rays emerged from the Blessed One’s body<note place="end" xml:id="UT22084-061-019-25">
               The Chinese reads <foreign xml:lang="zh" type="term">舉身</foreign> (“whole
-              body”).</note> and circled the Jeta Grove seven times. The light made contact
+              body”).</note> and circled Jeta’s Grove seven times. The light made contact
               with<note place="end" xml:id="UT22084-061-019-26"> Rather than “made contact with”
               (Tib. <foreign xml:lang="Bo-Ltn" type="term">’od kyis reg par byas</foreign>) the
               Chinese has simply <foreign xml:lang="zh" type="term">照</foreign>
@@ -1423,7 +1425,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dge slong ma</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགེ་སློང་མ།</term>
                             <term xml:lang="zh" type="attestedSource">比丘尼</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A fully ordained Buddhist nun.</p>
                             </note>
                         </gloss>
@@ -1577,19 +1579,19 @@
                             </note>
                         </gloss>
                     </item>
-          <item>
+          <!--<item>
             <gloss type="person" xml:id="UT22084-061-019-301">
                             <term type="translationMain">Anāthapiṇḍada</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mgon med zas sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
                             <term xml:lang="zh" type="attestedSource">給孤獨</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>An important benefactor of the Buddha who donated the Jeta
                 Grove outside of Śrāvastī to the Buddhist community.</p>
                             </note>
                         </gloss>
-          </item>
+          </item>-->
           <item>
             <gloss type="person" xml:id="UT22084-061-019-302">
                             <term type="translationMain">Bāvarī</term>
@@ -1871,7 +1873,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
                             <term xml:lang="zh" type="attestedSource">兜率天</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Maitreya’s heavenly abode in the desire realm, where future
                 buddhas are said to dwell prior to their awakening in our world. </p>
                             </note>
@@ -1884,7 +1886,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dzam bu’i gling</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཛམ་བུའི་གླིང་།</term>
                             <term xml:lang="zh" type="attestedSource">閻浮提沒</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The southern continent according to Indian cosmology, named
                 for the Jambu or rose-apple tree.</p>
                             </note>
@@ -1904,27 +1906,14 @@
                         </gloss>
           </item>
           <item>
-            <gloss type="place" xml:id="UT22084-061-019-327">
-                            <term type="translationMain">Prince Jeta’s Grove</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <term xml:lang="zh" type="attestedSource">祇樹給孤獨園</term>
-                            <note type="definition">
-                                <p>The park outside of Śrāvastī, donated to the Buddha by
-                Anāthapiṇḍada.</p>
-                            </note>
-                        </gloss>
-          </item>
-          <item>
             <gloss type="place" xml:id="UT22084-061-019-328">
-                            <term type="translationMain">Jeta Grove</term>
+              <term type="translationMain">Jeta’s Grove</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal byed kyi tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
                             <term xml:lang="zh" type="attestedSource">祇樹林</term>
                             <note type="definition">
-                                <p>Prince Jeta’s Grove.</p>
+                              <p>See “Prince Jeta’s Grove, Anāthapiṇḍada’s Park.”</p>
                             </note>
                         </gloss>
           </item>
@@ -1966,18 +1955,13 @@
                         </gloss>
                     </item>
           <item>
-            <gloss type="place" xml:id="UT22084-061-019-332">
-                            <term type="translationMain">Anāthapiṇḍada’s park</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">anātha­piṇḍadasya ārāmaḥ</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mgon med zas sbyin gyi kun dga’ ra ba</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-                            <term xml:lang="zh" type="attestedSource">給孤獨園</term>
-                            <note type="definition">
-                                <p>Also known as Jetavana; an important early site for the Sangha
-                provided by the wealthy patron Anāthapiṇḍada outside Śrāvastī.</p>
-                            </note>
+                        <gloss xml:id="UT22084-061-019-386" type="place" mode="match">
+                            <term type="translationMain">Prince Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
-          </item>
+                    </item>
         </list>
       </div>
     </back>
