--- a/translations/kangyur/translations/054-007_toh126-like_gold_dust.xml
+++ b/translations/kangyur/translations/054-007_toh126-like_gold_dust.xml
@@ -42,7 +42,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -187,6 +187,9 @@
                 </change>
                 <change who="#konchog" when="2024-04-28T18:13:43.015Z" type="text-version" status="1.0.4" xml:id="UT22084-054-007-1069">
                     <desc>Fixed one typo.</desc>
+                </change>
+                <change who="#andre" when="2024-06-28T09:46:38.456Z" type="text-version" status="1.0.5" xml:id="UT22084-054-007-1071">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -346,8 +349,7 @@
                     </p>
                                         <lb/>
                                         <p tid="26">Thus did I hear at one time. The Blessed One was
-                                                staying at Prince Jeta’s Grove, Anāthapiṇḍada’s park
-                                                in Śrāvastī, along with a great saṅgha of 1,250
+                                                staying in Śrāvastī, in Prince Jeta’s Grove, Anāthapiṇḍada’s park, along with a great saṅgha of 1,250
                                                 monks and many thousands of bodhisattvas. </p>
                                         <milestone unit="chunk" xml:id="UT22084-054-007-81"/>
                                         <p tid="27">Venerable Ānanda rose from his seat, draped his
@@ -774,14 +776,7 @@
                             </note>
                                                 </gloss>
                     </item>
-                                        <item>
-                        <gloss type="person" xml:id="UT22084-054-007-126">
-                                                  <term type="translationMain">Anāthapiṇḍada</term>
-                                                  <term xml:lang="Bo-Ltn" n="1">mgon med zas sbyin </term>
-                                                  <term xml:lang="bo" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
-                                                  <term xml:lang="Sa-Ltn">anāthapiṇḍada</term>
-                                                </gloss>
-                    </item>
+                    
                                         <item>
                         <gloss type="person" xml:id="UT22084-054-007-127">
                                                   <term type="translationMain">Ānanda</term>
@@ -850,15 +845,17 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-054-007-134">
-                                                  <term type="translationMain">Prince Jeta’s
-                                                  Grove</term>
-                                                  <term xml:lang="Bo-Ltn" n="1">rgyal bu rgyal byed
-                                                  kyi tshal </term>
-                                                  <term xml:lang="bo" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                                                  <term xml:lang="Sa-Ltn">jetavana</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-054-007-1070" type="place" mode="match">
+                            <term type="translationMain">Prince Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
+                            <note type="definition" rend="prepend">
+                                <p>See also “park.”</p>
+                            </note>
+                        </gloss>
                     </item>
+                                        
                                         <item>
                         <gloss type="place" xml:id="UT22084-054-007-135">
                                                   <term type="translationMain">Śrāvastī</term>
